// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<autocomplete-single> matches snapshot (default render) 1`] = `
<autocomplete-single input-id="fruit" label="Fruits" placeholder="Type to search...">
  <div class="autocomplete-container form-group">
    <div>
      <label class="form-control-label label-sm" htmlfor="fruit" id="fruit-label">
        <span>
          Fruits
        </span>
      </label>
      <div>
        <div class="autocomplete-single-select input-group">
          <input aria-autocomplete="list" aria-controls="fruit-listbox" aria-expanded="false" aria-haspopup="listbox" aria-labelledby="fruit-label" autocomplete="off" class="form-control" id="fruit" inputmode="text" name="fruits" placeholder="Type to search..." role="combobox" spellcheck="false" type="text" value="">
        </div>
      </div>
    </div>
  </div>
</autocomplete-single>
`;

exports[`<autocomplete-single> matches snapshot (dropdown open with matches) 1`] = `
<autocomplete-single input-id="fruit" label="Fruits">
  <div class="autocomplete-container form-group">
    <div>
      <label class="form-control-label label-sm" htmlfor="fruit" id="fruit-label">
        <span>
          Fruits
        </span>
      </label>
      <div>
        <div class="autocomplete-single-select input-group">
          <input aria-autocomplete="list" aria-controls="fruit-listbox" aria-expanded="true" aria-haspopup="listbox" aria-labelledby="fruit-label" autocomplete="off" class="form-control" id="fruit" inputmode="text" name="fruits" placeholder="Fruits" role="combobox" spellcheck="false" type="text" value="an">
          <button aria-label="Clear input" class="clear-btn" title="Clear input" type="button">
            <i aria-hidden="true" class="fa-times fas"></i>
          </button>
        </div>
        <div aria-live="polite" class="autocomplete-dropdown single">
          <ul id="fruit-listbox" role="listbox" tabindex="-1">
            <li aria-selected="false" class="autocomplete-dropdown-item" id="fruit-option-0" role="option">
              <span>
                Banana
              </span>
            </li>
            <li aria-selected="false" class="autocomplete-dropdown-item" id="fruit-option-1" role="option">
              <span>
                Orange
              </span>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</autocomplete-single>
`;
